--- a/css/bot.css
+++ b/css/bot.css
@@ -39,7 +39,7 @@ li {
     align-items: center;
     font-family: "Montserrat", sans-serif;
     color: #fff;
-    background: linear-gradient(to right, #010a19 10%, #043a60 50%, #0688c6 100%);
+    background: linear-gradient(to right, #70a6ff 10%, #6cbffa 50%, #93d6f6 100%);
 }
 
 .additional section {
